Fixed color scheme of dark mode cards

--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
   --color-secondary: #2925f9;
   --color-background: #f7f9fc;
   --color-text: #213547;
-  --color-card: #ffffff;
+  --color-card: #ffffffb7;
 }
 
 .dark {
@@ -17,7 +17,7 @@
   --color-secondary: #1e1c86;
   --color-background: #242424;
   --color-text: rgba(255, 255, 255, 0.966);
-  --color-card: #1a1a1a;
+  --color-card: #2424242b;
 }
 
 html {
